# eve-gas

./: pyproject.toml
eve_gas/: __init__.py  calculator.py  models.py
eve_gas/data/: gas_types.yaml  loader.py  modules.yaml  ships.yaml  sites.yaml
eve_gas/market/: esi.py
tests/: test_calculator.py
